<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout3"
        tools:context=".settingsPage">

        <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backForRed"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    >
            <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtForWorkTimer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBarForWorkTimer"
                    app:layout_constraintTop_toTopOf="@+id/seekBarForWorkTimer"
                    android:text="@string/defaultWorkTime"
                    style="@style/ForTxtInputSettings"
                    android:layout_marginEnd="32dp"/>
            <SeekBar
                    android:id="@+id/seekBarForWorkTimer"
                    style="@style/ForSeekBar"
                    android:max="@integer/defaultMaxWorkTime"
                    app:layout_constraintTop_toBottomOf="@+id/name1"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_marginBottom="32dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtForWorkTimer"
                    android:progress="@integer/defaultProgressWorkTime"
            />
            <SeekBar
                    android:id="@+id/seekBarForRelaxTimer"
                    style="@style/ForSeekBar"
                    android:progress="@integer/defaultProgressRestTime"
                    android:max="@integer/defaultMaxRestTime"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/txtForRelaxTimer"/>
            <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtForRelaxTimer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/seekBarForRelaxTimer"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBarForRelaxTimer"
                    android:text="@string/defaultRestTime"
                    style="@style/ForTxtInputSettings"
                    android:layout_marginEnd="32dp"/>
            <SeekBar
                    android:id="@+id/seekBarForCyclesBeforeRest"
                    style="@style/ForSeekBar"
                    android:progress="@integer/defaultProgressCyclesBeforeRest"
                    android:max="@integer/defaultMaxCyclesBeforeRest"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/txtForCyclesBeforeRest"/>
            <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtForCyclesBeforeRest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/seekBarForCyclesBeforeRest"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBarForCyclesBeforeRest"
                    android:text="@string/defaultCyclesBeforeRest"
                    style="@style/ForTxtInputSettings"
                    android:layout_marginEnd="32dp"/>
            <EditText
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtForBigRest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/seekBarForBigRest"
                    app:layout_constraintBottom_toBottomOf="@+id/seekBarForBigRest"
                    android:text="@string/defaultBigRestTime"
                    style="@style/ForTxtInputSettings"
                    android:layout_marginEnd="32dp"/>
            <SeekBar
                    android:id="@+id/seekBarForBigRest"
                    style="@style/ForSeekBar"
                    android:progress="@integer/defaultProgressBigRestTime"
                    android:max="@integer/defaultMaxBigRestTime"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/txtForBigRest"/>
            <TextView
                    android:text="@string/nameWorkTime"
                    android:id="@+id/name1"
                    style="@style/ForTxtNameForSettings"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/seekBarForWorkTimer"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintVertical_bias="0.26"
                    app:layout_constraintEnd_toStartOf="@+id/txtForWorkTimer"/>
            <TextView
                    android:text="@string/nameRestTime"
                    android:id="@+id/textView3"
                    style="@style/ForTxtNameForSettings"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarForWorkTimer"
                    app:layout_constraintBottom_toTopOf="@+id/seekBarForRelaxTimer"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtForRelaxTimer"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
            />
            <TextView
                    android:text="@string/nameCyclesBeforeRest"
                    android:id="@+id/textView4"
                    style="@style/ForTxtNameForSettings"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarForRelaxTimer"
                    app:layout_constraintBottom_toTopOf="@+id/seekBarForCyclesBeforeRest"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/txtForCyclesBeforeRest"/>
            <TextView
                    android:text="@string/nameBigRestTime"
                    android:id="@+id/textView5"
                    style="@style/ForTxtNameForSettings"
                    app:layout_constraintTop_toBottomOf="@+id/seekBarForCyclesBeforeRest"
                    app:layout_constraintBottom_toTopOf="@+id/seekBarForBigRest"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtForBigRest"
                    android:layout_marginStart="8dp"

                    android:layout_marginEnd="8dp"/>
            <Button
                    android:text="@string/text_for_prefBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnSave"
                    android:background="@android:color/transparent"
                    android:textColor="#fff"
                    android:textColorHighlight="@android:color/transparent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/seekBarForBigRest"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>